[package]
name = "gst-launch-multi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
gst = { package = "gstreamer", version = "0.23" }
gst_pbutils = { package = "gstreamer-pbutils", version = "0.23.0", features = ["v1_20"] }
# gst_mpegts = { package = "gstreamer-mpegts", version = "0.22.0", features = ["v1_20"]}
# gst-video = { package = "gstreamer-video", version = "0.22.0", features = ["v1_22"] }
# gst-app = { package = "gstreamer-app", version = "0.22.0"}
# m3u8-rs = "5.0.3"
thiserror = {version = "*"}
anyhow = {version = "*"}
tokio = {version = "*", features = ["full"]}
text_io = {version = "*"}

[[bin]]
name = "gst-launch-multi"
